--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 anyascii==0.3.2
 asgiref==3.7.2
 beautifulsoup4==4.12.3
+bidict==0.23.1
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -19,20 +20,26 @@ djangorestframework-simplejwt==5.3.1
 draftjs-exporter==5.0.0
 et-xmlfile==1.1.0
 filetype==1.2.0
+gunicorn==21.2.0
+h11==0.14.0
 html5lib==1.1
 idna==3.6
 l18n==2021.3
 laces==0.1.1
 oauthlib==3.2.2
 openpyxl==3.1.2
+packaging==24.0
 pillow==10.2.0
 pillow_heif==0.15.0
 pycparser==2.21
 PyJWT==2.8.0
+python-engineio==4.9.0
+python-socketio==5.11.1
 python3-openid==3.2.0
 pytz==2024.1
 requests==2.31.0
 requests-oauthlib==1.4.0
+simple-websocket==1.0.0
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
@@ -41,3 +48,4 @@ urllib3==2.2.1
 wagtail==6.0.1
 webencodings==0.5.1
 Willow==1.8.0
+wsproto==1.2.0
