--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ pillow==10.2.0
 pillow_heif==0.15.0
 pycparser==2.21
 PyJWT==2.8.0
+python-decouple==3.8
 python-engineio==4.9.0
 python-socketio==5.11.1
 python3-openid==3.2.0
