--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,18 @@ anyascii==0.3.2
 asgiref==3.7.2
 beautifulsoup4==4.12.3
 bidict==0.23.1
+Brotli==1.1.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 cryptography==42.0.5
 defusedxml==0.7.1
+dj-database-url==2.1.0
 dj-rest-auth==5.0.2
 Django==5.0.3
 django-allauth==0.61.1
+django-cors-headers==4.3.1
 django-filter==23.5
 django-modelcluster==6.3
 django-permissionedforms==0.1
@@ -31,6 +35,8 @@ openpyxl==3.1.2
 packaging==24.0
 pillow==10.2.0
 pillow_heif==0.15.0
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
 python-decouple==3.8
@@ -45,8 +51,11 @@ six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
 telepath==0.3.1
+typing_extensions==4.10.0
 urllib3==2.2.1
+uvicorn==0.28.0
 wagtail==6.0.1
 webencodings==0.5.1
+whitenoise==6.6.0
 Willow==1.8.0
 wsproto==1.2.0
