--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 DEBUG=True
 SECRET_KEY=arandomstring
 ALLOWED_HOSTS=*,
+DB_URL=postgresql://postgres:postgres@localhost:5432/mysite
 DB_ENGINE=postgresql
 DB_NAME=dbname
 DB_USER=postgres
