--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
-  - name: api_saude_db
+  - name: saude
     plan: free
-    databaseName: api_saude
+    databaseName: saude
     user: api_saude
 
 services:
