--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ dj-rest-auth==5.0.2
 Django==4.2.11
 django-allauth==0.61.1
 django-cors-headers==4.3.1
+django-currentuser==0.7.0
 django-filter==23.5
 django-modelcluster==6.3
 django-permissionedforms==0.1
